tests/new_explicit_allocator_bad.hop
// Verifies explicit new allocator must be a MemAllocator value or pointer.
fn main() {
	var _p *i32 = new i32 in 1
}
